Major update: Add Toast notifications, Skeleton loaders, Unit tests
 New Features:
- Toast notification system (4 types)
- Skeleton loaders for better UX
- Comprehensive unit tests
- Error handling improvements
- Loading states optimization

 Technical Updates:
- Removed search page (integrated into catalog)
- Removed actor page (simplified UX)
- Updated dependencies
- Fixed TypeScript/ESLint issues
- Added cSpell configuration

 Testing:
- MovieCard component tests
- Toast system tests
- Redux slice tests
- Test utilities setup

 Ready for production!

--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest --watch"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
