--- a/package.json
+++ b/package.json
@@ -11,7 +11,17 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest run --coverage",
-    "test:watch": "vitest --watch"
+    "test:watch": "vitest --watch",
+    "cypress:open": "cypress open --config-file cypress.config.mts",
+    "cypress:run": "cypress run --config-file cypress.config.mts",
+    "cypress:run:headless": "cypress run --headless --config-file cypress.config.mts",
+    "cypress:run:chrome": "cypress run --browser chrome --config-file cypress.config.mts",
+    "cypress:run:firefox": "cypress run --browser firefox --config-file cypress.config.mts",
+    "test:e2e": "start-server-and-test dev http://localhost:5173 cypress:run",
+    "test:e2e:open": "start-server-and-test dev http://localhost:5173 cypress:open",
+    "test:e2e:ci": "start-server-and-test preview http://localhost:4173 cypress:run:headless",
+    "e2e": "npm run test:e2e",
+    "e2e:open": "npm run test:e2e:open"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
@@ -29,6 +39,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/node": "^24.0.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/styled-components": "^5.1.34",
